tdf#99069: lock the solar mutex before updating sidebar

Change-Id: I55808b72bcebab95ead3e140c9da94596826c27d
Reviewed-on: https://gerrit.libreoffice.org/23811
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-on: https://gerrit.libreoffice.org/23813
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>